# rust-cfn-exports-fetcher

./: Cargo.toml  config.yaml  package.json  pre-install.js  start.js  uninstall.js
src/: config.rs  main.rs  outputs.rs  writer.rs
