[package]
name = "cfn-exports-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-cloudformation = "0.21.0"
aws-types = "0.51.0"
futures = "0.3.25"
serde ={  version= "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tokio = { version = "1.22.0", features = ["full"] }
