[package]
name = "cfn-exports-fetcher"
version = "0.5.0"
edition = "2021"
description = "Fetch Outputs from CFN stacks"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-cloudformation = "0.21.0"
aws-types = "0.51.0"
futures = "0.3.25"
serde ={  version= "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tempfile = "3.3.0"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
